src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Oral_Cancer_Awareness__c</fullName>
        <description>Added for LeadLife</description>
        <label>Oral Cancer Awareness</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oral_Cancer_Screening__c</fullName>
        <description>Added for LeadLife</description>
        <label>Oral Cancer Screening</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Phone__c</fullName>
        <label>Original Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Outbound_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agent who makes initial outbound contact with prospective patient.</description>
        <label>Outbound Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Call_Result__c</fullName>
        <label>Outbound Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live Call</fullName>
                </value>
                <value>
                    <fullName>Live Call Transfer to Scheduler</fullName>
                </value>
                <value>
                    <fullName>Live Call sent to Fielded Lead</fullName>
                </value>
                <value>
                    <fullName>VM No Message Left</fullName>
                </value>
                <value>
                    <fullName>VM Left Message</fullName>
                </value>
                <value>
                    <fullName>Wrong Number/Disconnected/Out of Service</fullName>
                </value>
                <value>
                    <fullName>Patient Already Scheduled with CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Health__c</fullName>
        <label>Overall Health</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSites_Any_yellow_teeth__c</fullName>
        <description>ProSites Question holder - Are any of your teeth yellow, stained or somewhat discolored</description>
        <label>PSites - Any yellow teeth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Are_you_missing_any_teeth__c</fullName>
        <description>ProSites Question Holder - Are you missing any teeth?</description>
        <label>PSites - Are you missing any teeth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Are_your_gums_red__c</fullName>
        <description>ProSites Question Holder - Are your gums red, sore, puffy, bleeding or receded?</description>
        <label>PSites - Are your gums red</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_any_teeth_appear_small__c</fullName>
        <description>ProSites Question Holder - Do any of your teeth appear too small, short,  large or long?</description>
        <label>PSites - Do any teeth appear small</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_you_have_a_gummy_smile__c</fullName>
        <description>Prosites Question Holder - Do you have a &quot;gummy&quot; smile (too much of your gums show when smiling)?</description>
        <label>PSites - Do you have a gummy smile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_you_have_any_dark_crowns__c</fullName>
        <description>ProSites Question Holder - Do you have any crowns or bridges that appear dark at the edge of your gums?</description>
        <label>PSites - Do you have any dark crowns</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_you_have_any_fillings__c</fullName>
        <description>ProSites Question Holder - Do you have any gray, black or silver (mercury) fillings in your teeth?</description>
        <label>PSites - Do you have any fillings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_you_have_prior_dental_work__c</fullName>
        <description>ProSites Question Holder - Do you have any prior dental work that appears unnatural?</description>
        <label>PSites - Do you have prior dental work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Do_you_see_any_pitting__c</fullName>
        <description>ProSites Question Holder - Do you see any pitting or defects on the surface of your teeth</description>
        <label>PSites - Do you see any pitting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_Does_your_smile_inhibit_you__c</fullName>
        <description>ProSites Question Holder - Does your smile inhibit you from laughing or smiling?</description>
        <label>PSites - Does your smile inhibit you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSites_are_the_edges_of_any_teeth_worn__c</fullName>
        <description>Prosites Question Holder - Are the edges of any teeth worn down, chipped,  or uneven?</description>
        <label>PSites - are the edges of any teeth worn</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Future__c</fullName>
        <description>Rainmaker - Needs Dialogue - Patient Future</description>
        <inlineHelpText>Rainmaker - Needs Dialogue - Patient Future</inlineHelpText>
        <label>Patient Future</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patient_History__c</fullName>
        <description>Rainmaker - Needs Dialogue - Patient History Information</description>
        <inlineHelpText>Rainmaker - Needs Dialogue - Patient History Information</inlineHelpText>
        <label>Patient History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personality_Type_Advisors__c</fullName>
        <description>Personality Capture- White Glove- Advisors</description>
        <label>Personality Type Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conscientious</fullName>
                </value>
                <value>
                    <fullName>Dominant</fullName>
                </value>
                <value>
                    <fullName>Influential</fullName>
                </value>
                <value>
                    <fullName>Steady</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personality_Type__c</fullName>
        <description>Added for LeadLife</description>
        <label>Personality Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cautious Thinker</fullName>
                </value>
                <value>
                    <fullName>Dominant</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Steady Relator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Length__c</fullName>
        <formula>LEN( Phone )</formula>
        <label>Phone Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Notes__c</fullName>
        <description>Notes for the phone number</description>
        <label>Phone Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_2__c</fullName>
        <formula>IF(  ISNULL(Credit_Score__c ), &quot;&quot;, 

IF( Credit_Score__c == 0, &quot;Blue&quot;,
IF( Credit_Score__c &gt;= 700, &quot;Green&quot;,
IF( Credit_Score__c &lt; 700 &amp;&amp; Credit_Score__c &gt;= 600 , &quot;Yellow&quot;,
IF( Credit_Score__c &lt; 600 , &quot;Red&quot;,

 &quot;&quot;)))))</formula>
        <label>Pre Screen 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Formula__c</fullName>
        <formula>CASE( Pre_Screen__c ,
&quot;Green&quot;, &quot;1. Green&quot;,
&quot;Yellow&quot;, &quot;2. Yellow&quot;,
&quot;Red&quot;, &quot;3. Red&quot;,
&quot;Blue (No Hit)&quot;, &quot;4. Blue&quot;,
&quot;5. Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Screen (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Status__c</fullName>
        <label>Pre-Screen Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#33CC00</color>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#F3D904</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Blue</fullName>
                    <color>#3366FF</color>
                    <label>Blue</label>
                </value>
                <value>
                    <fullName>Not Checked</fullName>
                    <color>#FF9900</color>
                    <label>Not Checked</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Screen_Time__c</fullName>
        <label>Pre Screen Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_Screen__c</fullName>
        <label>Pre Screen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue (No Hit)</fullName>
                </value>
                <value>
                    <fullName>Website Down-No Prescreen</fullName>
                </value>
                <value>
                    <fullName>PO Box</fullName>
                </value>
                <value>
                    <fullName>Insufficient Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_DOW_for_Apt__c</fullName>
        <description>for use with ProSites Appointment Request form</description>
        <label>Preferred DOW for Apt</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <description>Method by which a patient prefers to be contacted.</description>
        <label>Preferred Method of Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_times_s_for_apt__c</fullName>
        <description>for use with ProSites appointment Request form</description>
        <label>Preferred times(s) for apt</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescreen_ExtensionNumber__c</fullName>
        <description>Used for StrikeIron and Prescreen</description>
        <label>Prescreen ExtensionNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Post_Directional__c</fullName>
        <description>Used with StrikeIron and Prescreen</description>
        <label>Prescreen Post Directional</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Pre_Directional__c</fullName>
        <description>Use with StrikeIron and Prescreen</description>
        <label>Prescreen Pre Directional</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Street_Name__c</fullName>
        <description>Used with StrikeIron and Prescreen</description>
        <label>Prescreen Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Street_Number__c</fullName>
        <description>Used for StrikeIron and Prescreen</description>
        <label>Prescreen Street Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescreen_Type__c</fullName>
        <description>Used with StrikeIron and Prescreen</description>
        <label>Prescreen Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Implant_Consultation_Notes__c</fullName>
        <label>Previous Implant Consultation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Reason__c</fullName>
        <description>Added for LeadLife</description>
        <label>Primary Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProSites_Are_any_of_your_teeth_turned__c</fullName>
        <description>ProSites Question Holder - Are any of your teeth turned, crooked, or uneven</description>
        <label>ProSites - Are any of your teeth turned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProSites_Do_you_have_any_gaps__c</fullName>
        <description>Prosites Question Holder - Do you have any gaps or spaces between your teeth</description>
        <label>ProSites - Do you have any gaps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_Interested_In__c</fullName>
        <label>Procedure Interested In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Braces</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Root Canal</fullName>
                </value>
                <value>
                    <fullName>Whitening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_All_Score__c</fullName>
        <label>Prospect All Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_All_Tier__c</fullName>
        <label>Prospect All Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_IQ_Score__c</fullName>
        <description>Numeric score returned by Prospect IQ.  Should only be around on leads where the prescreen was not returned as Green,  Yellow,  or Red</description>
        <label>Prospect IQ Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_IQ_Tier__c</fullName>
        <description>Text score returned by Prospect IQ.  Should only be around on leads where the prescreen was not returned as Green,  Yellow,  or Red</description>
        <label>Prospect IQ Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospective_Patient_Source_Categories__c</fullName>
        <formula>CASE(  Trigger_Referral_Source__c ,
&quot;TV&quot;,&quot;TV&quot;,
&quot;Newspaper&quot;,&quot;Newspaper&quot;,
&quot;Website&quot;,&quot;Web&quot;,
&quot;Dr. Referral&quot;,&quot;Referral&quot;,
&quot;Web Lead 2&quot;,&quot;Web&quot;,
&quot;Friend/Relative&quot;,&quot;Referral&quot;,
&quot;Patient Referral&quot;,&quot;Referral&quot;,
&quot;Website&quot;,&quot;Web&quot;,
&quot;Web to Lead&quot;,&quot;Web&quot;,
&quot;LiveChat&quot;,&quot;Web&quot;,
&quot;Facebook&quot;,&quot;Web&quot;,
&quot;Web Lead 3&quot;,&quot;Web&quot;,
&quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospective Patient Source Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psites_Do_you_smile_with_lips_closed__c</fullName>
        <description>ProSites Question Holder - When being photographed, do you smile with your lips closed instead of flashing a full smile?</description>
        <label>Psites - Do you smile with lips closed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psites_Smile_self_conscious__c</fullName>
        <description>ProSites Question Holder - Are you self-conscious about your teeth or smile?</description>
        <label>Psites - Smile self-conscious</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psites_Would_you_change_smile__c</fullName>
        <description>Prosites Question Holder - Would you like to change anything about the appearance of your teeth or smile?</description>
        <label>Psites - Would you change smile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psites_Would_you_like_whiter_teeth__c</fullName>
        <description>ProSites Question Holder - Would you like your teeth to be whiter?</description>
        <label>Psites - Would you like whiter teeth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Cancelling_Appointment_list__c</fullName>
        <label>Reason For Cancelling Appointment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Confirmation</fullName>
                </value>
                <value>
                    <fullName>Scheduling Issues/Sick</fullName>
                </value>
                <value>
                    <fullName>No reason given/LM</fullName>
                </value>
                <value>
                    <fullName>Cost Prohibitive/Went Somewhere Else</fullName>
                </value>
                <value>
                    <fullName>Center Closed Day of Consult</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Auto_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a lead should receive an automated phone call reminder by default when scheduling an apt</description>
        <label>Receive Auto Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Text_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a lead should receive an automatic text reminder by default when scheduling an apt.</description>
        <label>Receive Text Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Doctor_Name__c</fullName>
        <formula>Referral_Doctor__r.First_Last__c</formula>
        <label>Referral Doctor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Doctor who referred the lead to us</description>
        <label>Referral Doctor</label>
        <referenceTo>Practice_Doctor__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Full_Arch__c</fullName>
        <description>Pushed from ClearVantage</description>
        <label>Referral Full Arch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upper</fullName>
                </value>
                <value>
                    <fullName>Lower</fullName>
                </value>
                <value>
                    <fullName>Dual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Implant_Abutment__c</fullName>
        <description>Pushed from ClearVanatage</description>
        <label>Referral Implant Abutment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healing</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Temp with Provisional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Implant_Type__c</fullName>
        <description>Pushed from ClearVantage</description>
        <label>Referral Implant Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Location__c</fullName>
        <description>ClearConnect Referral Location Code value</description>
        <label>Referral Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Address__c</fullName>
        <formula>if(!isnull(Referral_Office__c), Referral_Office__r.Street__c + BR() ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.City__c + &apos;, &apos; ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.State_Province__c + &apos; &apos; ,&apos;&apos;) + 
if(!isnull(Referral_Office__c), Referral_Office__r.Postal_Code__c ,&apos;&apos;)</formula>
        <label>Referral Office Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Contact__c</fullName>
        <formula>Referral_Office__r.Primary_Contact_Name__c</formula>
        <label>Referral Office Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Name__c</fullName>
        <formula>Referral_Office__r.Name</formula>
        <label>Referral Office Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office_Phone__c</fullName>
        <formula>Referral_Office__r.Phone__c</formula>
        <label>Referral Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The GP who referred the lead in</description>
        <label>Referral Office</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Other_Procedure__c</fullName>
        <description>Pushed from ClearVantage</description>
        <label>Referral Other Procedure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <description>What additional referral source brought you to ClearChoice?</description>
        <label>Referral Source - Second</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Friend/Relative</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>VIP Event</fullName>
                </value>
                <value>
                    <fullName>Dr. Referral</fullName>
                </value>
                <value>
                    <fullName>Patient Referral</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Grand Canyon Email Response</fullName>
                </value>
                <value>
                    <fullName>LiveChat</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Ask ClearChoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Track__c</fullName>
        <description>Indicates the payment track that an implant referral is on.  Has an impact on how the procedure will be handled and the payment to the GP.</description>
        <label>Referral Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track I</fullName>
                </value>
                <value>
                    <fullName>Track II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrals_Available__c</fullName>
        <formula>if( Center__r.GP_Office_Count__c &gt; 0 , &apos;YES&apos;,&apos;NO&apos;)</formula>
        <label>Referrals Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if prospective patient was referred by a former patient.</description>
        <label>&lt;b&gt;&lt;font color=red&gt;Referred By Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refused_Referrals__c</fullName>
        <description>A list of dental practices the account/lead has refused to be referred to.  This will be used to keep us from offering that practice again</description>
        <label>Refused Referrals</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refused_to_give_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by Meridith Hertach. 1/14/2010</description>
        <label>Refused to give email / no email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Prospective_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Prospective Patient</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Prospective Patient</relationshipLabel>
        <relationshipName>Related_Prospective_Patient</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>